@@ -1,3 +1,8 @@
+2002-04-18  Pascal Obry  <obry@gnat.com>
+
+	* mingwex/dirent.c (opendir): Convert given pathname to
+	absolute pathname.
+
 2002-04-17  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* Makefile.in (INCLUDES): Add "-iwithprefixbefore include" to
